<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/google_deepPurple_700">


        <TextView
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Official Contacts"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />


    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_below="@+id/toolbar_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@color/google_deepPurple_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="#fff"
                android:id="@+id/t1"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/app7"
                />
            <TextView

                android:textColor="#fff"
                android:layout_below="@+id/t1"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:id="@+id/t2"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/app8"
                />
            <TextView
                android:textColor="#fff"
                android:layout_below="@+id/t2"
                android:id="@+id/t3"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/app9"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"/>
            <TextView
                android:textColor="#fff"
                android:layout_below="@+id/t3"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:id="@+id/t4"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/app10"
                />
            <TextView
                android:textColor="#fff"
                android:layout_below="@+id/t4"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:id="@+id/t5"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/app11"
                />
            <TextView
                android:textColor="#fff"
                android:layout_below="@+id/t5"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:id="@+id/t6"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/app12"
                />

        </RelativeLayout>
    </ScrollView>




</RelativeLayout>
