<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/google_deepPurple_700">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What is CAT?"
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle=""
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />


    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_below="@+id/toolbar_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/google_deepPurple_500">
            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/app1"
                />
            <TextView
                android:textColor="#fff"
                android:layout_below="@+id/t1"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:id="@+id/t2"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/app2"
                />
            <TextView
                android:textColor="#fff"
                android:layout_below="@+id/t2"
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textStyle="bold"
                android:text="@string/app3"/>
            <TextView
                android:textColor="#fff"
                android:layout_below="@+id/t3"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:id="@+id/t4"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/app4"
                />

        </RelativeLayout>
    </ScrollView>




</RelativeLayout>
